--- a/flex/03-flex-header-2/style.css
+++ b/flex/03-flex-header-2/style.css
@@ -12,6 +12,9 @@ body {
   background: white;
   border-bottom: 1px solid #ddd;
   box-shadow: 0 0 8px rgba(0,0,0,.1);
+  justify-content: space-between;
+  display: flex;
+  padding: 8px;
 }
 
 .profile-image {
@@ -37,6 +40,14 @@ button {
   padding: 8px 24px;
 }
 
+
+.left, .right{
+  display: flex;
+  padding: 8px;
+  gap: 16px;
+  align-items: center;
+}
+
 a {
   /* this removes the line under our links */
   text-decoration: none;
@@ -45,4 +56,9 @@ a {
 
 ul {
   list-style-type: none;
+  display: flex;
+  justify-content: space-between;
+  gap: 16px;
+  margin: 0;
+  padding: 0;
 }
