--- a/flex/06-flex-layout/style.css
+++ b/flex/06-flex-layout/style.css
@@ -5,6 +5,42 @@ body {
   margin: 0;
   overflow: hidden;
   font-family: Roboto, sans-serif;
+  display: flex;
+  flex-direction: column;
+}
+
+.header, .footer {
+  display: flex;
+  align-items: center;
+  justify-content:space-between;
+
+}
+
+.left-links,.right-links {
+  display: flex;
+  gap: 10px;
+  margin: 10px;
+}
+
+a {
+  text-decoration: none;
+  color: gray;
+}
+
+.content {
+  display: flex;
+  flex: 1;
+  flex-direction: column;
+align-items: center;
+justify-content: center;
+}
+
+.footer {
+  background-color: lightgray;
+}
+
+.logo {
+  justify-content: center;
 }
 
 img {
@@ -23,4 +59,8 @@ input {
   border-radius: 16px;
   padding: 8px 24px;
   width: 400px;
+}
+
+li{
+  list-style-type: none;
 }
